--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "jquery": "^3.3.1",
     "prerender-spa-plugin": "^3.4.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
+    "vue-scrollto": "^2.13.0",
     "vue-toasted": "^1.1.24",
     "webpack": "^4.17.1"
   },
